# ocaml-extlib

./: .gitignore  extlib.opam
src/: IO.ml  configure.ml  dune  dynArray.ml  extArray.ml  extArray.mli  extBuffer.ml  extHashtbl.ml  extHashtbl.mli  extList.ml  extString.mli  pMap.ml  refList.ml  std.ml
